	* Update dictionary.lancom with new attributes. #2847
	* Added rlm_sql_mongo.  See raddb/mods-available/sql
	  Note that this module is experimental.
	* Added more documentation in sites-available/robust-proxy-accounting
	* sqlippool now re-allocates unexpired leases, to prevent IP pool
	  exhaustion when clients perform multiple reauthentication attempts.
	  Patch from Terry Burton.

	Bug fixes
	* Allow listen.ipaddr to reference an IPv6-only host.  Fixes #2627.
	* ERX-Acct-Request-Reason is "integer".  Closes #2635.
	* Fix a slow memory leak in the file management code.
	* Try to fix file permissions if they get modified while
	  the server is running.
	* Fix slow memory leak with clients.
	* Fix request and connection timeouts in rlm_rest.
	* Fix systemd issues.  Patches from Daniele Rondina.
	* Fixes from clang analyzer.
	* Fix missing include for the dictionaries: alcatel.esam,
	  altiga,alvarion.wimax.v2_2,aptis,asn,audiocodes,avaya,bristol,
	  columbia_university,freedhcp,garderos,infoblox,motorola.illegal,
	  starent.vsa1, telkom, wimax.wichorus.
	* Fix internal sanity check when running with "-Xx"
	* Allow "inner-tunnel" virtual servers to work better with
	  "accept" and "reject" policies.
	* Fix dictionary.huawei data types for Huawei-DNS-Server-IPv6-address
	  and Huawei-Framed-IPv6-Address.  Fixes #2803
	* Framed-Interface-ID in postgresql/queries.conf is string, not inet
	  Fixes #2817.
	* Fix rlm_cache to complain on unknown attributes in the
	  "update" section of its configuration.
	* Add configure checks for -latomic.  This helps on armel, mips
	  and mipsel.  Fixes #2828.
	* Add support to Oracle 19 and 18. Via #2857
	* Add support for decoding tags in rlm_rest.  Fixes #2848.

FreeRADIUS 3.0.19 Wed 10 Apr 2019 09:00:00 EDT urgency=high
	Feature improvements
	* Update dictionary.cisco
	* Update sqlippool to allow for stored procedures with
	  PostgreSQL.  This increases performance substantially.
	  Patch from Nathan Ward.  Fixes #2540.